--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@testing-library/cypress": "^9.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "jest": "^29.5.0",
     "jest-mock-extended": "^3.0.4",
     "jest-preview": "^0.3.1"
   }
