--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.2",
     "jest": "^29.5.0",
+    "jest-date-mock": "^1.0.8",
     "jest-mock": "^29.5.0",
     "jest-mock-extended": "^3.0.4",
     "jest-preview": "^0.3.1"
