--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^4.16.2",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -31,6 +33,7 @@
     "jest-date-mock": "^1.0.8",
     "jest-mock": "^29.5.0",
     "jest-mock-extended": "^3.0.4",
-    "jest-preview": "^0.3.1"
+    "jest-preview": "^0.3.1",
+    "prisma": "^4.16.2"
   }
 }
