chore: add env example

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ GITHUB_CLIENT_SECRET=
 # -----------------------------------------------------------------------------
 # Database (MySQL - PlanetScale)
 # -----------------------------------------------------------------------------
-DATABASE_URL="mysql://root:root@localhost:3306/taxonomy?schema=public"
+DATABASE_URL="mysql://root:root@localhost:3306/example?schema=public"
 
 # -----------------------------------------------------------------------------
 # Email (Postmark)
@@ -20,4 +20,4 @@ SMTP_HOST=smtp.postmarkapp.com
 SMTP_PORT=25
 SMTP_USER=
 SMTP_PASSWORD=
-SMTP_FROM=Taxonomy <taxonomy@example.com>
+SMTP_FROM=Next <admin@example.com>
