--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "lucide-react": "^0.259.0",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
